web-server-files/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ws
spec:
        #type: NodePort #LoadBalancer
 ports:
 - port: 80
   name: http
   protocol: TCP
   targetPort: 80
   #nodePort: 30010
 - port: 443
   name: https
   protocol: TCP
   targetPort: 443
   #nodePort: 30011
 selector:
   app: nginx-ws
   # externalIPs:
   #- <pub-ip> 
   #status:
   #loadBalancer:
   #ingress:
   # - ip: <pub-ip>
