web-server-files/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  - hosts:
      - nginxws-ingress.apps.r192b.r192b.dsp.lab
    secretName: testsecret-tls    
  rules:
  - host: nginxws-ingress.apps.r192b.r192b.dsp.lab
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          serviceName: nginx-ws
          servicePort: 80
