web-server-files/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nginx-ingress-ws
  namespace: nginx-ingress
  selfLink: /apis/route.openshift.io/v1/namespaces/nginx-ingress/routes/nginxws-ingress
spec:
  host: nginxws-ingress.apps.r192b.r192b.dsp.lab
  to:
    kind: Service
    name: nginx-ws
    weight: 100
  wildcardPolicy: None
